<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trash &amp; Toilet</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="app_name_1">TRASH &amp; TOILET</string>
    <string name="search_toilet">Toilet</string>
    <string name="search_dustbin">Dustbin</string>
    <string name="title_activity_search_toilet">SearchToilet</string>
    <string name="title_activity_search_trash">SearchTrash</string>
    <string name="toileticon">Finding toilet</string>
    <string name="dustbinicon">Finding dustbin</string>
    <string name="title_activity_marker">Marker</string>
    <string name="title_activity_loading_page">LoadingPage</string>
    <string name="welcome">Welcome! </string>
    <string name="title_activity_header_footer">HeaderFooter</string>
    <string name="trash">Trash</string>
    <string name="toilet">Toilet</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_view_all">ViewAll</string>
    <string name="title_activity_view_toilets">ViewToilets</string>
    <string name="title_activity_view_trash">ViewTrash</string>
    <string name="title_activity_androidtab">AndroidTab</string>
    <string name="title_activity_add_new">AddNew</string>
    <string name="title_activity_suggest_new">SuggestNew</string>
    <string name="title_activity_info">Info</string>
    <string name="suggest_heading">What are you suggesting?</string>
    <string name="report_heading">Please fill report below</string>
    <string name="report_information">Information</string>
    <string name="report_type">Select what to report</string>
    <string name="location_here">Report for this location</string>
    <string name="location_elsewhere">Report for different location</string>
    <string name="confirm">Confirm</string>
    <string name="map_text">Long Press to add a location</string>
    <string name="enter_desc">Enter Description</string>
    <string name="add_report">SAVE REPORT</string>
    <string name="suggest_save">SUGGEST</string>
    <string name="why_use">Why use this app</string>
    <string name="sani_tips">Sanitation tips</string>
    <string name="desc_hint">for ex :- Public Toilet/Dustbin</string>
    <string name="content_abt_app1">This APP helps you find toilets and trashcan locations near you. This means that you can help keep your community clean and sanitized by using existing and adding new toilet locations to the app.</string>
    <string name="content_abt_app2">The more locations you help add to our app the easier it will be for others and yourself to find toilets or trashcans near them. </string>
     <string name="why_to_suggest">Why to Suggest</string>   
     <string name="content_why_suggest">You can suggest a location for a toilet/trashcans using our app, that way toilets are built in the places and trashcans are placed where people need them most!</string>
</resources>