<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#404041"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="176dp"
        android:layout_height="36dp"
        android:layout_marginLeft="8dp"
        android:background="#404041"
        android:src="@drawable/tandtheader" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="36dp"
        android:layout_marginBottom="1dp"
        android:background="#B2D34C"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:text="@string/report_information"
            android:textColor="#283018"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="#d6E485"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:text="@string/why_use"
            android:textColor="#283018"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right"
            android:orientation="horizontal" >

            <ImageView
              android:id="@+id/imgIcon1"                
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:onClick="getInfo"
                android:src="@drawable/icon_go_right" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#A7A9AC"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/content1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:paddingRight="10dp"
            android:text="@string/content_abt_app1"
            android:textColor="#283018"
            android:textSize="18sp"
            android:textStyle="bold" >
        </TextView>

        <TextView
            android:id="@+id/content2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/content_abt_app2"
            android:textColor="#283018"
            android:textSize="18sp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="#d6E485"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:text="@string/why_to_suggest"
            android:textColor="#283018"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgIcon2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:onClick="whySuggest"
                android:src="@drawable/icon_go_right" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#A7A9AC"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/content3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:textColor="#283018"
            android:textSize="18sp"
            android:textStyle="bold" 
             android:text="@string/content_why_suggest" >
        </TextView>
    </LinearLayout>
  <LinearLayout
        android:id="@+id/layout5"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:background="#d6E485"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:text="@string/sani_tips"
            android:textColor="#283018"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/imgIcon3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:onClick="getSaniTips"
                android:src="@drawable/icon_go_right" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#A7A9AC"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/content4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:textColor="#283018"
            android:textSize="18sp"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>
</LinearLayout>
</ScrollView>